dark mode fixed

--- a/src/styles/countries.css
+++ b/src/styles/countries.css
@@ -1,6 +1,3 @@
-.countries_container[data-theme="dark"] {
-    background-color: hsl(209, 23%, 22%);
-}
 
 .countries_container {
     width: 100%;
