--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,24 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap');
 
 :root {
-    --DarkBlue:hsl(209, 23%, 22%); /*Dark mode element*/
-    --VeryDarkBlue:hsl(207, 26%, 17%); /*Dark Mode Background*/
-    --VeryDarkBlue:hsl(200, 15%, 8%); /*Light Mode Text*/
-    --DarkGray:hsl(0, 0%, 52%); /*Light Mode Input*/
-    --VeryLightGray:hsl(0, 0%, 98%); /*Light Mode Background*/
-    --White:hsl(0, 0%, 100%); /*(Dark Mode Text & Light Mode Elements)*/
+    --DarkBlue: hsl(209, 23%, 22%);
+    /*Dark mode element*/
+    --VeryDarkBlueBackground: hsl(207, 26%, 17%);
+    /*Dark Mode Background*/
+    --VeryDarkBlue: hsl(200, 15%, 8%);
+    /*Light Mode Text*/
+    --DarkGray: hsl(0, 0%, 52%);
+    /*Light Mode Input*/
+    --VeryLightGray: hsl(0, 0%, 98%);
+    /*Light Mode Background*/
+    --White: hsl(0, 0%, 100%);
+    /*(Dark Mode Text & Light Mode Elements)*/
+    
+
+
+
 }
 
+
+[data-color-scheme='light'] {
+    background-color: var(--VeryLightGray);
+    color: var(--VeryDarkBlue);
+  }
+  
+  [data-color-scheme='dark'] {
+    background-color: var(--VeryDarkBlueBackground);
+    color: var(--White);
+  }
+
+
+
 * {
-    
+
     font-family: 'Nunito Sans';
 
 }
 
-[data-theme="dark"] {
-    background-color: var(--VeryDarkBlue);
-    color: white;
-}
+
 body {
     width: 100%;
     margin: 0;
@@ -30,7 +50,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     height: 60px;
     /* background-color: white; */
 }
@@ -51,6 +71,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .search_container {
     width: 100%;
     display: flex;
@@ -72,9 +93,9 @@ body {
 
 .search_container .search_country:focus {
     outline: none;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
-    
+
 }
 
 .filter_container .region_selector {
@@ -87,9 +108,9 @@ body {
 }
 
 .filter_container .region_selector:focus {
-        outline: none;
-        box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-    
+    outline: none;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+
 }
 
 
@@ -112,9 +133,9 @@ body {
         text-align: center;
     }
 
- .search_container .search_country {
-     width: 430px;
-     font-size: 18px;
+    .search_container .search_country {
+        width: 430px;
+        font-size: 18px;
 
- }
+    }
 }
